--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,11 @@ body {
     font-family: 'Lato', sans-serif;
 }
 
+::-moz-selection {
+    background: #000;
+    color: #FFF;
+}
+
 ::selection {
     background: #000;
     color: #FFF;
@@ -39,7 +44,7 @@ nav li {
 
 nav li :hover {
     background: #2b2e34;
-    color: white;
+    color: #FFFFFF;
 }
 
 nav a {
@@ -48,13 +53,13 @@ nav a {
     font-weight: 800;
     text-transform: uppercase;
     background: rgb(200, 200, 200);
-    color: black;    
+    color: #000000;    
     padding: 10px 25px;
     border: 1px black solid;
 }
 
 .active {
-    background: white;
+    background: #FFFFFF;
 }
 
 section {
@@ -65,9 +70,16 @@ section {
 
 #about {
     background-color: #FFFFFF;   
+    display: -webkit-box;   
+    display: -ms-flexbox;   
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     border-bottom: 3px black solid;
 }
 
@@ -75,6 +87,7 @@ section {
     background: #365991;   
     color: #FFF;
     border-bottom: 3px black solid;
+    display: -ms-grid;
     display: grid;
     justify-items: center;
 }
@@ -90,7 +103,8 @@ section {
 h1 {
     text-align: center;
     font-size: 4em;
-    margin-block-end: 0;
+    -webkit-margin-after: 0;
+            margin-block-end: 0;
 }
 
 h2 {
@@ -117,14 +131,24 @@ h2 {
     list-style: none;
     margin: 0px;
     padding: 0px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
 }
 
 #languagesList li {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     padding: 15px;
     font-size: 1.4em;
 }
@@ -134,7 +158,9 @@ h2 {
 }
 
 #portfolioContent {
+    display: -ms-grid;
     display: grid;
+    -ms-grid-columns: auto 30px auto 30px auto;
     grid-template-columns: repeat(3, auto);
     grid-row-gap: 30px;
     grid-column-gap: 30px;
@@ -150,21 +176,33 @@ h2 {
 .portfolioThumb {
     height: 200px;
     width: auto;
+    -webkit-transition: 0.4s;
+    -o-transition: 0.4s;
     transition: 0.4s;
     z-index: 1;
 }
 
 .portfolioListing:hover > .portfolioThumb {
-    transform: scale(1.1);    
+    -webkit-transform: scale(1.1);
+        -ms-transform: scale(1.1);
+            transform: scale(1.1);    
 }
 
 .portfolioText {
     position: absolute;
+    background: -webkit-gradient(linear, left top, left bottom, from(rgba(163, 166, 168, 0.65)), to(rgba(80, 80, 80, 0.65)));
+    background: -webkit-linear-gradient(rgba(163, 166, 168, 0.65), rgba(80, 80, 80, 0.65));
+    background: -o-linear-gradient(rgba(163, 166, 168, 0.65), rgba(80, 80, 80, 0.65));
     background: linear-gradient(rgba(163, 166, 168, 0.65), rgba(80, 80, 80, 0.65)); 
-    color: white;
+    color: #FFFFFF;
     border-top: 1px black dotted;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     width: inherit;
     height: 109px;
     margin-top: 90px;
@@ -178,14 +216,19 @@ h2 {
 
 .portfolioListing:hover > .portfolioText {
     background: rgba(255, 255, 255, 0.8);
-    color: black;
+    color: #000000;
     border-top: 1px black solid;
     text-shadow: 2px 2px 4px #fff;
 }
 
 .listingWrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
 }
 
 .extraLink {
@@ -196,20 +239,26 @@ h2 {
 }
 
 .extraLink:hover {
-    background: white;
-    color: black;
+    background: #FFFFFF;
+    color: #000000;
 }
 
 #emailLink {
     padding: 8px 21px;
-    color: black;
+    color: #000000;
     background: #f2ad58;
+    background: -webkit-gradient(linear,left top, left bottom,from(#f6c88f),to(#ed9220));
+    background: -webkit-linear-gradient(#f6c88f,#ed9220);
+    background: -o-linear-gradient(#f6c88f,#ed9220);
     background: linear-gradient(#f6c88f,#ed9220);
     border: 1px black solid;
 }
 
 #emailLink:hover {
     background: #eba145;
+    background: -webkit-gradient(linear,left top, left bottom,from(#f4bc77),to(#e18512));
+    background: -webkit-linear-gradient(#f4bc77,#e18512);
+    background: -o-linear-gradient(#f4bc77,#e18512);
     background: linear-gradient(#f4bc77,#e18512);
 }
 
@@ -234,6 +283,8 @@ h2 {
     padding: 5px;
     width: 9%;
     left: 45.1%;
+    -webkit-transition: all 0.25s;
+    -o-transition: all 0.25s;
     transition: all 0.25s;
     
     visibility: hidden;
@@ -248,7 +299,7 @@ h2 {
     visibility: visible;
     margin-top: 30px;
     background-color: rgb(200, 200, 200);
-    color: black;
+    color: #000000;
     content: "Click to copy";
 }
 
@@ -262,8 +313,8 @@ h2 {
 }
 
 #gitLink:hover {
-    background:white;
-    color: black;
+    background: #FFFFFF;
+    color: #000000;
 }
 
 @media screen and (max-width: 1023px){
@@ -294,13 +345,19 @@ h2 {
         background-color: #fff;
         margin-bottom: 6px;
         margin-left: auto;
+        -webkit-transition: 0.4s;
+        -o-transition: 0.4s;
         transition: 0.4s;
     } 
 
     .main-navigation.extended 
     .menu-icon:nth-child(1) {  
-        transform-origin: right;
-        transform: rotate(-45deg) translate(-3px, -4px);
+        -webkit-transform-origin: right;  
+            -ms-transform-origin: right;  
+                transform-origin: right;
+        -webkit-transform: rotate(-45deg) translate(-3px, -4px);
+            -ms-transform: rotate(-45deg) translate(-3px, -4px);
+                transform: rotate(-45deg) translate(-3px, -4px);
     }
 
     .main-navigation.extended 
@@ -310,12 +367,18 @@ h2 {
 
     .main-navigation.extended 
     .menu-icon:nth-child(3) {
-        transform-origin: right;
-        transform: rotate(45deg) translate(-2px, 5px);
+        -webkit-transform-origin: right;
+            -ms-transform-origin: right;
+                transform-origin: right;
+        -webkit-transform: rotate(45deg) translate(-2px, 5px);
+            -ms-transform: rotate(45deg) translate(-2px, 5px);
+                transform: rotate(45deg) translate(-2px, 5px);
     }
 
     .nav-extendable {
         height: 0;
+        -webkit-transition: height .4s;
+        -o-transition: height .4s;
         transition: height .4s;
         overflow: hidden;
     }
@@ -332,12 +395,14 @@ h2 {
     }
 
     #portfolioContent {
+        -ms-grid-columns: auto auto;
         grid-template-columns: repeat(2, auto);
     }
 }
 
 @media screen and (max-width: 660px){
     #portfolioContent {
+        -ms-grid-columns: auto;
         grid-template-columns: auto;
     }
 }
