--- a/css/main.css
+++ b/css/main.css
@@ -22,9 +22,15 @@ a:active {
 }
 
 nav {
-    position: fixed;
+    /* position: fixed;
     margin-left: 20px;
+    z-index: 20; */
+    position: fixed;
+    padding-left: 20px;
     z-index: 20;
+    width: 100%;
+    background: #2b2e34;
+    border-bottom: 2px black solid;
 }
 
 #nav-menu-bar {
@@ -63,13 +69,18 @@ nav a {
 }
 
 section {
-    min-height: 650px;
+    min-height: 800px;
     text-align: center;
     padding: 50px 0px 100px;
 }
 
 #about {
-    background-color: #FFFFFF;   
+    background-image: linear-gradient(
+      rgba(255, 255, 255, 0.1),
+      rgba(0, 0, 0, 0.3)
+    ), url(../img/about.jpg);
+    background-size: cover;
+    background-attachment: fixed;
     display: -webkit-box;   
     display: -ms-flexbox;   
     display: flex;
@@ -81,10 +92,12 @@ section {
         -ms-flex-pack: center;
             justify-content: center;
     border-bottom: 3px black solid;
+        color: #F5F4F0;
+    text-shadow: 4px 4px #000;
 }
 
 #portfolio {
-    background: #365991;   
+    background-image: url("../img/portfolio.png");  
     color: #FFF;
     border-bottom: 3px black solid;
     display: -ms-grid;
