--- a/css/main.css
+++ b/css/main.css
@@ -13,10 +13,7 @@ body {
     color: #FFF;
 }
 
-a, 
-a:visited, 
-a:hover, 
-a:active {
+a {
   color: inherit;
   text-decoration: none;
 }
@@ -29,7 +26,8 @@ nav {
     padding-left: 20px;
     z-index: 20;
     width: 100%;
-    background: #2b2e34;
+    /* background: rgb(200, 200, 200); */
+    background: #2C2C2C;
     border-bottom: 2px black solid;
 }
 
@@ -49,8 +47,8 @@ nav li {
 }
 
 nav li :hover {
-    background: #2b2e34;
-    color: #FFFFFF;
+    /* background: #2b2e34; */
+    /* color: #FFFFFF; */
 }
 
 nav a {
@@ -58,14 +56,20 @@ nav a {
     text-align: center;
     font-weight: 800;
     text-transform: uppercase;
-    background: rgb(200, 200, 200);
-    color: #000000;    
+    /* background: rgb(200, 200, 200); */
+    /* color: #000000;     */
+    color: #cbcbcb;    
     padding: 10px 25px;
-    border: 1px black solid;
+    /* border: 1px black solid; */
+}
+
+nav a:hover { 
+    color: white; 
 }
 
 .active {
-    background: #FFFFFF;
+    /* background: #FFFFFF; */
+    color: #f2ad58;
 }
 
 section {
@@ -311,7 +315,7 @@ h2 {
 #email:hover:after {
     visibility: visible;
     margin-top: 30px;
-    background-color: rgb(200, 200, 200);
+    background-color: #cbcbcb;
     color: #000000;
     content: "Click to copy";
 }
