changed portfolio cards

--- a/css/main.css
+++ b/css/main.css
@@ -46,10 +46,10 @@ nav li {
     margin: 5px;
 }
 
-nav li :hover {
-    /* background: #2b2e34; */
-    /* color: #FFFFFF; */
-}
+/* nav li :hover {
+    background: #2b2e34;
+    color: #FFFFFF;
+} */
 
 nav a {
     display: block;
@@ -81,10 +81,11 @@ section {
 #about {
     background-image: linear-gradient(
       rgba(255, 255, 255, 0.1),
-      rgba(0, 0, 0, 0.3)
+      rgba(0, 0, 0, 0.1)
     ), url(../img/about.jpg);
+    background-image: url(../img/about.jpg);
     background-size: cover;
-    background-attachment: fixed;
+    /* background-attachment: fixed; */
     display: -webkit-box;   
     display: -ms-flexbox;   
     display: flex;
@@ -96,8 +97,8 @@ section {
         -ms-flex-pack: center;
             justify-content: center;
     border-bottom: 3px black solid;
-        color: #F5F4F0;
-    text-shadow: 4px 4px #000;
+    /* color: #F5F4F0; */
+    /* text-shadow: 4px 4px #000; */
 }
 
 #portfolio {
@@ -113,7 +114,8 @@ section {
     min-height: 400px;
     text-align: center;
     padding: 50px 0px 0px 0px;
-    background: #2b2e34;
+    /* background: #2b2e34; */
+    background: #2C2C2C;
     color: #FFFFFF;
 }
 
@@ -138,6 +140,10 @@ h2 {
 #about > p {
     margin: 3em;
     font-size: 1.2em;
+}
+
+#portfolio > h2 {
+    margin-bottom: 0;
 }
 
 #contact > h2 {
@@ -184,14 +190,19 @@ h2 {
 }
 
 .portfolioListing {
-    border: 1px black solid;
+    /* border: 1px black solid; */
+    border: 1px white solid;
     overflow: hidden;
-    width: 280px;
-    height: 200px;
+    /* width: 280px;
+    height: 200px; */
+    width: 320px;
+    height: 285px;
+    background: #2C2C2C;
 }
 
 .portfolioThumb {
-    height: 200px;
+    /* height: 200px; */
+    height: 228px;
     width: auto;
     -webkit-transition: 0.4s;
     -o-transition: 0.4s;
@@ -207,12 +218,13 @@ h2 {
 
 .portfolioText {
     position: absolute;
-    background: -webkit-gradient(linear, left top, left bottom, from(rgba(163, 166, 168, 0.65)), to(rgba(80, 80, 80, 0.65)));
+    /* background: -webkit-gradient(linear, left top, left bottom, from(rgba(163, 166, 168, 0.65)), to(rgba(80, 80, 80, 0.65)));
     background: -webkit-linear-gradient(rgba(163, 166, 168, 0.65), rgba(80, 80, 80, 0.65));
     background: -o-linear-gradient(rgba(163, 166, 168, 0.65), rgba(80, 80, 80, 0.65));
-    background: linear-gradient(rgba(163, 166, 168, 0.65), rgba(80, 80, 80, 0.65)); 
-    color: #FFFFFF;
-    border-top: 1px black dotted;
+    background: linear-gradient(rgba(163, 166, 168, 0.65), rgba(80, 80, 80, 0.65));  */
+    /* color: #FFFFFF; */
+    color: transparent;
+    /* border-top: 1px black dotted; */
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -221,10 +233,16 @@ h2 {
         -ms-flex-direction: column;
             flex-direction: column;
     width: inherit;
-    height: 109px;
-    margin-top: 90px;
-    text-shadow: 2px 2px 4px #000;
+    /* height: 109px; */
+    /* height: 138px; */
+    /* height: 226px; */
+    height: 238px;
+    margin-top: -12px;
+    transition: 0.4s;
+    /* margin-top: 90px; */
+    /* text-shadow: 2px 2px 4px #000; */
     z-index: 2;
+    visibility: hidden;
 }
 
 .portfolioText > h3 {
@@ -232,9 +250,17 @@ h2 {
 }
 
 .portfolioListing:hover > .portfolioText {
-    background: rgba(255, 255, 255, 0.8);
-    color: #000000;
-    border-top: 1px black solid;
+    visibility: visible;
+    /* background: rgba(255, 255, 255, 0.8); */
+    background: rgba(44, 44, 44, 0.8);
+    color: white;
+    /* margin-top: 5px;
+    margin-left: 10px;
+    height: 200px;
+    width: 300px; */
+    /* background: #2C2C2C; */
+    /* color: #000000; */
+    /* border-top: 1px black solid; */
     text-shadow: 2px 2px 4px #fff;
 }
 
@@ -250,8 +276,11 @@ h2 {
 
 .extraLink {
     background: rgb(130, 130, 130);
-    padding: 5px;
-    border: 1px black solid;
+    /* padding: 5px; */
+    /* border: 1px black solid;
+    border-top: none; */
+    padding: 10px;
+    border: 1px white solid;
     border-top: none;
 }
 
