--- a/index.css
+++ b/index.css
@@ -14,8 +14,8 @@ body {
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+    color: inherit;
+    text-decoration: none;
 }
 
 nav {
@@ -47,12 +47,12 @@ nav a {
     text-align: center;
     font-weight: 800;
     text-transform: uppercase;
-    color: #cbcbcb;    
+    color: #cbcbcb;
     padding: 10px 25px;
 }
 
-nav a:hover { 
-    color: white; 
+nav a:hover {
+    color: white;
 }
 
 .active {
@@ -66,40 +66,34 @@ section {
 }
 
 #about {
-    background-image: -webkit-gradient(
-      linear,
-      left top, left bottom,
-      from(rgba(255, 255, 255, 0.1)),
-      to(rgba(44, 44, 44, 0.1))
-    ), url(../img/about.jpg);
-    background-image: -webkit-linear-gradient(
-      rgba(255, 255, 255, 0.1),
-      rgba(44, 44, 44, 0.1)
-    ), url(../img/about.jpg);
-    background-image: -o-linear-gradient(
-      rgba(255, 255, 255, 0.1),
-      rgba(44, 44, 44, 0.1)
-    ), url(../img/about.jpg);
-    background-image: linear-gradient(
-      rgba(255, 255, 255, 0.1),
-      rgba(44, 44, 44, 0.1)
-    ), url(../img/about.jpg);
+    background-image: -o-linear-gradient(rgba(255, 255, 255, 0.1),
+            rgba(44, 44, 44, 0.1)), url(./img/about.jpg);
+    background-image: -webkit-gradient(linear,
+            left top, left bottom,
+            from(rgba(255, 255, 255, 0.1)),
+            to(rgba(44, 44, 44, 0.1))), url(./img/about.jpg);
+    background-image: linear-gradient(rgba(255, 255, 255, 0.1),
+            rgba(44, 44, 44, 0.1)), url(./img/about.jpg);
     background-size: cover;
-    display: -webkit-box;   
-    display: -ms-flexbox;   
+    background-position: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
     -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
     border-bottom: 3px black solid;
 }
 
 #portfolio {
-    background-image: url("../img/portfolio.png");  
+    background-image: url("./img/portfolio.png");
     color: #FFF;
     border-bottom: 3px black solid;
     display: -ms-grid;
@@ -119,7 +113,7 @@ h1 {
     text-align: center;
     font-size: 4em;
     -webkit-margin-after: 0;
-            margin-block-end: 0;
+    margin-block-end: 0;
 }
 
 h2 {
@@ -129,21 +123,22 @@ h2 {
     margin-bottom: 6%;
 }
 
-#about > h2 {
+#about>h2 {
     margin: 0.83em 0 0;
 }
 
-#about > p {
+#about>p {
     margin: 3em;
     font-size: 1.2em;
+    max-width: 850px;
 }
 
-#portfolio > h2 {
+#portfolio>h2 {
     margin-bottom: 0;
     padding-bottom: 50px;
 }
 
-#contact > h2 {
+#contact>h2 {
     margin-bottom: 5%;
 }
 
@@ -156,10 +151,10 @@ h2 {
     display: -ms-flexbox;
     display: flex;
     -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
     -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
+    flex-wrap: wrap;
     border: 2px #ed9220 solid;
     border-radius: 15px;
 }
@@ -170,8 +165,8 @@ h2 {
     display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
     padding: 15px;
     font-size: 1.5em;
     color: white;
@@ -181,25 +176,28 @@ h2 {
     padding: 10px;
 }
 
+
+/*#region Portfolio Content*/
+
 #portfolioContent {
     display: -ms-grid;
     display: grid;
-    -ms-grid-columns: auto 30px auto 30px auto;
-    grid-template-columns: repeat(3, auto);
+    -ms-grid-columns: 1fr 30px 1fr;
+    grid-template-columns: 1fr 1fr;
     grid-row-gap: 30px;
     grid-column-gap: 30px;
+    width: 1164px;
 }
 
-.portfolioListing {
+#portfolioContent .portfolioListing {
     border: 1px rgb(220, 220, 220) solid;
     overflow: hidden;
-    width: 320px;
-    height: 285px;
+    height: 300px;
     background: #2C2C2C;
 }
 
-.portfolioThumb {
-    height: 228px;
+#portfolioContent .portfolioThumb {
+    height: 243px;
     width: auto;
     -webkit-transition: 0.4s;
     -o-transition: 0.4s;
@@ -207,13 +205,13 @@ h2 {
     z-index: 1;
 }
 
-.portfolioListing:hover > .portfolioThumb {
+#portfolioContent .portfolioListing:hover>.portfolioThumb {
     -webkit-transform: scale(1.1);
-        -ms-transform: scale(1.1);
-            transform: scale(1.1);    
+    -ms-transform: scale(1.1);
+    transform: scale(1.1);
 }
 
-.portfolioText {
+#portfolioContent .portfolioText {
     position: absolute;
     visibility: hidden;
     color: transparent;
@@ -222,8 +220,147 @@ h2 {
     display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    width: 507px;
+    height: 253px;
+    padding: 0px 30px;
+    margin-top: -12px;
+    font-size: 1.2em;
+    line-height: 1.6;
+    -webkit-transition: 0.4s;
+    -o-transition: 0.4s;
+    transition: 0.4s;
+    z-index: 2;
+}
+
+#portfolioContent .portfolioText>h3 {
+    margin-bottom: 0;
+}
+
+#portfolioContent .portfolioListing:hover>.portfolioText {
+    visibility: visible;
+    background: rgba(44, 44, 44, 0.8);
+    color: #fff;
+    text-shadow: 2px 2px 5px #000;
+}
+
+#portfolioContent .listingWrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    width: 569px;
+}
+
+#portfolioContent .extraLink {
+    background: rgb(130, 130, 130);
+    padding: 10px;
+    border: 1px rgb(220, 220, 220) solid;
+    border-top: none;
+}
+
+#portfolioContent .extraLink:hover {
+    background: #FFFFFF;
+    color: #000000;
+}
+
+/*#endregion Portfolio Content*/
+
+
+#olderProjectsBtn {
+    margin: 40px 0 30px;
+    padding: 10px 17px;
+    background: #2C2C2Caa;
+    border: 1px solid #FFFFFF;
+    font-size: 2.5em;
+    cursor: pointer;
+}
+
+.arrow {
+    border: solid #FFFFFF;
+    border-width: 0 3px 3px 0;
+    display: inline-block;
+    padding: 3px;
+    padding: 6px;
+    margin-left: 12px;
+}
+
+.up {
+    -ms-transform: rotate(-135deg);
+    transform: rotate(-135deg);
+    -webkit-transform: rotate(-135deg);
+}
+
+.down {
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+    margin-bottom: 6px;
+}
+
+
+/*#region Portfolio Content Old*/
+
+#portfolioContentOld {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: auto 30px auto 30px auto;
+    grid-template-columns: repeat(3, auto);
+    grid-row-gap: 30px;
+    grid-column-gap: 30px;
+    height: 100%;
+    overflow: hidden;
+    -webkit-transition: all .3s;
+    -o-transition: all .3s;
+    transition: all .3s;
+}
+
+#portfolioContentOld.hidden {
+    height: 0;
+}
+
+#portfolioContentOld.hidden .portfolioText {
+    display: none;
+}
+
+#portfolioContentOld .portfolioListing {
+    border: 1px rgb(220, 220, 220) solid;
+    overflow: hidden;
+    width: 320px;
+    height: 285px;
+    background: #2C2C2C;
+}
+
+#portfolioContentOld .portfolioThumb {
+    height: 228px;
+    width: auto;
+    -webkit-transition: 0.4s;
+    -o-transition: 0.4s;
+    transition: 0.4s;
+    z-index: 1;
+}
+
+#portfolioContentOld .portfolioListing:hover>.portfolioThumb {
+    -webkit-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    transform: scale(1.1);
+}
+
+#portfolioContentOld .portfolioText {
+    position: absolute;
+    visibility: hidden;
+    color: transparent;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
     width: 260px;
     height: 238px;
     padding: 0px 30px;
@@ -236,63 +373,66 @@ h2 {
     z-index: 2;
 }
 
-.portfolioText > h3 {
+#portfolioContentOld .portfolioText>h3 {
     margin-bottom: 0;
 }
 
-.portfolioListing:hover > .portfolioText {
+#portfolioContentOld .portfolioListing:hover>.portfolioText {
     visibility: visible;
     background: rgba(44, 44, 44, 0.8);
     color: #fff;
     text-shadow: 2px 2px 5px #000;
 }
 
-.listingWrapper {
+#portfolioContentOld .listingWrapper {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
 }
 
-.extraLink {
+#portfolioContentOld .extraLink {
     background: rgb(130, 130, 130);
     padding: 10px;
     border: 1px rgb(220, 220, 220) solid;
     border-top: none;
 }
 
-.extraLink:hover {
+#portfolioContentOld .extraLink:hover {
     background: #FFFFFF;
     color: #000000;
 }
+
+/*#endregion Portfolio Content Old*/
+
+
+/*#region Contact*/
 
 #emailLink {
     padding: 8px 21px;
     color: #000000;
     background: #f2ad58;
-    background: -webkit-gradient(linear,left top, left bottom,from(#f6c88f),to(#ed9220));
-    background: -webkit-linear-gradient(#f6c88f,#ed9220);
-    background: -o-linear-gradient(#f6c88f,#ed9220);
-    background: linear-gradient(#f6c88f,#ed9220);
+    background: -o-linear-gradient(#f6c88f, #ed9220);
+    background: -webkit-gradient(linear, left top, left bottom, from(#f6c88f), to(#ed9220));
+    background: linear-gradient(#f6c88f, #ed9220);
     border: 1px black solid;
 }
 
 #emailLink:hover {
     background: #eba145;
-    background: -webkit-gradient(linear,left top, left bottom,from(#f4bc77),to(#e18512));
-    background: -webkit-linear-gradient(#f4bc77,#e18512);
-    background: -o-linear-gradient(#f4bc77,#e18512);
-    background: linear-gradient(#f4bc77,#e18512);
+    background: -o-linear-gradient(#f4bc77, #e18512);
+    background: -webkit-gradient(linear, left top, left bottom, from(#f4bc77), to(#e18512));
+    background: linear-gradient(#f4bc77, #e18512);
 }
 
 #emailLink:active {
     background-color: #ed9220;
 }
 
-#contactWrapper > p {
+#contactWrapper>p {
     margin-top: 25px;
     margin-bottom: 75px;
 }
@@ -303,7 +443,7 @@ h2 {
     font-size: 1.1em;
 }
 
-#email:after {    
+#email:after {
     position: absolute;
     border-radius: 5px;
     padding: 5px;
@@ -312,7 +452,7 @@ h2 {
     -webkit-transition: all 0.25s;
     -o-transition: all 0.25s;
     transition: all 0.25s;
-    
+
     visibility: hidden;
     margin-top: 24px;
     background-color: transparent;
@@ -344,8 +484,10 @@ h2 {
     color: #000000;
 }
 
-@media screen and (max-width: 1023px){
-    nav {        
+/*#endregion Contact*/
+
+@media screen and (max-width: 1023px) {
+    nav {
         margin-left: 0px;
         width: 100%;
     }
@@ -375,31 +517,28 @@ h2 {
         -webkit-transition: 0.4s;
         -o-transition: 0.4s;
         transition: 0.4s;
-    } 
-
-    .main-navigation.extended 
-    .menu-icon:nth-child(1) {  
-        -webkit-transform-origin: right;  
-            -ms-transform-origin: right;  
-                transform-origin: right;
-        -webkit-transform: rotate(-45deg) translate(-3px, -4px);
-            -ms-transform: rotate(-45deg) translate(-3px, -4px);
-                transform: rotate(-45deg) translate(-3px, -4px);
     }
 
-    .main-navigation.extended 
-    .menu-icon:nth-child(2) {
+    .main-navigation.extended .menu-icon:nth-child(1) {
+        -webkit-transform-origin: right;
+        -ms-transform-origin: right;
+        transform-origin: right;
+        -webkit-transform: rotate(-45deg) translate(-3px, -4px);
+        -ms-transform: rotate(-45deg) translate(-3px, -4px);
+        transform: rotate(-45deg) translate(-3px, -4px);
+    }
+
+    .main-navigation.extended .menu-icon:nth-child(2) {
         opacity: 0;
     }
 
-    .main-navigation.extended 
-    .menu-icon:nth-child(3) {
+    .main-navigation.extended .menu-icon:nth-child(3) {
         -webkit-transform-origin: right;
-            -ms-transform-origin: right;
-                transform-origin: right;
+        -ms-transform-origin: right;
+        transform-origin: right;
         -webkit-transform: rotate(45deg) translate(-2px, 5px);
-            -ms-transform: rotate(45deg) translate(-2px, 5px);
-                transform: rotate(45deg) translate(-2px, 5px);
+        -ms-transform: rotate(45deg) translate(-2px, 5px);
+        transform: rotate(45deg) translate(-2px, 5px);
     }
 
     .nav-extendable {
@@ -410,7 +549,7 @@ h2 {
         overflow: hidden;
     }
 
-    nav li  {
+    nav li {
         float: none;
         margin: 0;
     }
@@ -427,7 +566,7 @@ h2 {
     }
 }
 
-@media screen and (max-width: 660px){
+@media screen and (max-width: 660px) {
     #portfolioContent {
         -ms-grid-columns: auto;
         grid-template-columns: auto;
