--- a/index.css
+++ b/index.css
@@ -20,7 +20,8 @@ a {
 
 nav {
     position: fixed;
-    padding-left: 20px;
+    display: flex;
+    flex-direction: row-reverse;
     z-index: 20;
     width: 100%;
     background: #2C2C2C;
@@ -194,6 +195,8 @@ h2 {
 
 #portfolioContent .portfolioListing {
     border: 1px rgb(220, 220, 220) solid;
+    border-top-left-radius: 4%;
+    border-top-right-radius: 4%;
     overflow: hidden;
     height: 300px;
     background: #2C2C2C;
@@ -279,6 +282,7 @@ h2 {
     padding: 10px 17px;
     background: #2C2C2Caa;
     border: 1px solid #FFFFFF;
+    border-radius: 6px;
     font-size: 2.5em;
     cursor: pointer;
 }
@@ -332,6 +336,8 @@ h2 {
 
 #portfolioContentOld .portfolioListing {
     border: 1px rgb(220, 220, 220) solid;
+    border-top-left-radius: 4%;
+    border-top-right-radius: 4%;
     overflow: hidden;
     width: 320px;
     height: 285px;
